# deduper

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
docs/: GOOGLE_OAUTH_VERIFICATION.md  PRIVACY.md  RELEASE.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/audit/: mod.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/config/: embedded.rs  mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/hash/: mod.rs
src-tauri/src/oauth/: drive.rs
src-tauri/src/reports/: mod.rs
src-tauri/src/scanner/: drive.rs  engine.rs  full_audit.rs  gmail.rs  local.rs  mod.rs  mtp.rs  mtp_detect.ps1  mtp_list_files.ps1  photos.rs  vault.rs
src-tauri/src/watcher/: mod.rs
src/components/: SetupWizard.tsx
src/lib/: updater.ts
